# FakeServerQueries

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  version_script.lds
amxmodx/: fsq_manager.sma  fsq_names.ini
amxmodx/scripting/: fsq_manager.sma
amxmodx/scripting/include/: FakeServerQueries.inc
src/: InfoQueryBuilder.cpp  InfoQueryBuilder.h  ModInfoObsolete.cpp  ModInfoObsolete.h  ModInfoObsoleteBuilder.cpp  ModInfoObsoleteBuilder.h  PlayerQueryBuilder.cpp  PlayerQueryBuilder.h  PlayersData.cpp  PlayersData.h  RawByteBuilder.cpp  RawByteBuilder.h  RawByteReader.cpp  RawByteReader.h  SendToHooker.cpp  SendToHooker.h
src/api/: APIData.cpp  APIData.h  amxx_support.cpp  amxx_support.h  moduleconfig.h
src/helper/: external_api.h  fix_minmax.h  shared.h
test/: testInfoQueryBuilder.cpp  testPlayerQueryBuilder.cpp
